# ProjectBotTrading

./: .gitignore  AUDIT_REPORT_DATA_SOURCES.md  README.md  app.py  ecosystem.config.js  pyproject.toml  requirements.txt  run_dashboard.py
backtesting/: __init__.py  backtest_runner.py  parity_validator.py  replay_engine.py
chaos_testing/: __init__.py  executor.py  fault_injection.py  integration.py  models.py  reporter.py  scenario_library.py  test_cases.py  validator.py
config/: alerts.yaml  data_sources.yaml  health_scoring.yaml  risk.yaml  smart_money_confidence.yaml  system.yaml  trading.yaml
contracts/: __init__.py  exchange_enforcement.py  exchange_runtime_contract.py
core/: __init__.py  clock.py  constants.py  exceptions.py  orchestrator.py  state_manager.py
dashboard/: METRIC_MAPPING.md  README.md  __init__.py  api.py  main.py  schemas.py  services.py  streamlit_app.py
data_ingestion/: __init__.py  ingestion_service.py  real_ingestion_module.py  types.py
data_processing/: __init__.py  contracts.py  feature_engineering.py  processing_module.py
data_products/: __init__.py  anonymization.py  export_service.py
data_retention/: __init__.py  access_control.py  anonymizer.py  categories.py  lineage.py  manager.py  models.py  policies.py  storage.py
data_source_health/: __init__.py  base.py  config.py  exceptions.py  manager.py  metrics.py  models.py  registry.py  scorers.py
data_sources/: __init__.py  base.py  exceptions.py  models.py  registry.py
database/: __init__.py  database_module.py  engine.py  models.py  models_review.py  persistence.py  pipeline_persistence.py
decision_engine/: __init__.py  decision_state.py  trade_eligibility.py  veto_rules.py
docs/: DATA_SOURCES_INVENTORY.md
execution_engine/: __init__.py  alerting.py  config.py  errors.py  exchange_client.py  execution_service.py  execution_validator.py  models.py  order_manager.py  reconciliation.py  repository.py  state_machine.py  types.py  validation.py
human_review/: GOVERNANCE.md  README.md  __init__.py  router.py  schemas.py  service.py  telegram_notifier.py
monitoring/: __init__.py  alert_router.py  api.py  dashboard_service.py  health_checks.py  metrics.py  models.py  telegram_notifier.py
onchain_adapters/: __init__.py  base.py  exceptions.py  models.py  registry.py
orchestrator/: __init__.py  cli.py  core.py  models.py  pipeline.py  registry.py
parity_validation/: __init__.py  collectors.py  comparators.py  drift_detector.py  models.py  notifications.py  reporter.py  validator.py
(+259 files in other folders)
