[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-platform"
version = "0.1.0"
description = "Institutional-grade crypto trading system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    # TODO: Add project authors
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

# TODO: Define dependencies after module implementation
dependencies = [
    # Core
    # "pydantic>=2.0",
    # "pyyaml>=6.0",
    # "python-dotenv>=1.0",
    
    # Database
    # "sqlalchemy>=2.0",
    # "alembic>=1.12",
    # "asyncpg>=0.28",
    
    # HTTP & WebSocket
    # "httpx>=0.25",
    # "websockets>=12.0",
    
    # Data Processing
    # "pandas>=2.1",
    # "numpy>=1.26",
    
    # Monitoring
    # "prometheus-client>=0.18",
    # "python-telegram-bot>=20.0",
    
    # TODO: Add remaining dependencies
]

[project.optional-dependencies]
dev = [
    # "pytest>=7.4",
    # "pytest-asyncio>=0.21",
    # "pytest-cov>=4.1",
    # "mypy>=1.6",
    # "ruff>=0.1",
    # "black>=23.10",
]

[project.scripts]
# TODO: Define CLI entry points
# bootstrap-db = "scripts.bootstrap_db:main"
# run-ingestion = "scripts.run_ingestion:main"
# run-trading = "scripts.run_trading:main"
# emergency-stop = "scripts.emergency_stop:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "config*",
    "data_ingestion*",
    "data_processing*",
    "scoring_engine*",
    "decision_engine*",
    "risk_management*",
    "execution_engine*",
    "monitoring*",
    "reporting*",
    "storage*",
    "backtesting*",
    "dashboard*",
    "chaos_testing*",
    "data_products*",
    "scripts*",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "ANN", "S", "B", "A", "C4", "T20", "RET", "SIM"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
